# phash

./: Cargo.toml  LICENSE  README.MD
benches/bench/: main.rs
src/: chd.rs  hasher.rs  lib.rs  value.rs
